# sdl2

./: .gitignore  404.html  BUILD  BUILD.bazel  README-BAZEL.md  README.md  WORKSPACE  defs.bzl  index.html  search.html  sitemap.xml
.github/: pull.yml
README-android/: index.html
README-cmake/: index.html
README-directfb/: index.html
README-dynapi/: index.html
README-emscripten/: index.html
README-gesture/: index.html
README-git/: index.html
README-hg/: index.html
README-ios/: index.html
README-kmsbsd/: index.html
README-linux/: index.html
README-macosx/: index.html
README-nacl/: index.html
README-os2/: index.html
README-pandora/: index.html
README-platforms/: index.html
README-porting/: index.html
README-psp/: index.html
README-raspberrypi/: index.html
README-touch/: index.html
README-visualc/: index.html
README-wince/: index.html
README-windows/: index.html
README-winrt/: index.html
build-scripts/: ltmain.sh
include/: SDL_stdinc.h  SDL_vulkan.h
search/: search_index.json
src/atomic/: BUILD  BUILD.bazel
src/audio/: BUILD  BUILD.bazel
src/audio/alsa/: BUILD  BUILD.bazel
src/audio/android/: BUILD  BUILD.bazel
src/audio/arts/: BUILD  BUILD.bazel
src/audio/coreaudio/: BUILD  BUILD.bazel  SDL_coreaudio.h
src/audio/directsound/: BUILD  BUILD.bazel
src/audio/disk/: BUILD  BUILD.bazel
src/audio/dsp/: BUILD  BUILD.bazel
src/audio/dummy/: BUILD  BUILD.bazel
src/audio/emscripten/: BUILD  BUILD.bazel
src/audio/esd/: BUILD  BUILD.bazel
src/audio/fusionsound/: BUILD  BUILD.bazel
src/audio/haiku/: BUILD  BUILD.bazel
src/audio/jack/: BUILD  BUILD.bazel
src/audio/nacl/: BUILD  BUILD.bazel
src/audio/nas/: BUILD  BUILD.bazel
src/audio/netbsd/: BUILD  BUILD.bazel
src/audio/paudio/: BUILD  BUILD.bazel
src/audio/psp/: BUILD  BUILD.bazel
src/audio/pulseaudio/: BUILD  BUILD.bazel
src/audio/qsa/: BUILD  BUILD.bazel
src/audio/sndio/: BUILD  BUILD.bazel
src/audio/sun/: BUILD  BUILD.bazel
src/audio/wasapi/: BUILD  BUILD.bazel
src/audio/winmm/: BUILD  BUILD.bazel
src/core/: BUILD  BUILD.bazel
src/core/linux/: BUILD.bazel
src/core/unix/: BUILD.bazel
src/core/windows/: BUILD
src/cpuinfo/: BUILD  BUILD.bazel
src/dynapi/: BUILD  BUILD.bazel  SDL_dynapi.c
src/events/: BUILD.bazel  SDL_events_c.h
src/file/: BUILD  BUILD.bazel
src/file/cocoa/: BUILD.bazel
src/filesystem/: BUILD  BUILD.bazel
src/filesystem/cocoa/: BUILD.bazel
src/filesystem/dummy/: BUILD.bazel
src/filesystem/unix/: BUILD.bazel
src/haptic/: BUILD  BUILD.bazel
src/haptic/darwin/: BUILD.bazel
src/haptic/dummy/: BUILD.bazel
src/haptic/linux/: BUILD.bazel  SDL_syshaptic.c
src/hidapi/: BUILD.bazel
src/hidapi/linux/: BUILD.bazel
src/hidapi/mac/: BUILD.bazel
src/hidapi/windows/: BUILD.bazel
src/joystick/: BUILD  BUILD.bazel
src/joystick/darwin/: BUILD.bazel
src/joystick/dummy/: BUILD.bazel
src/joystick/hidapi/: BUILD.bazel
src/joystick/linux/: BUILD.bazel
src/joystick/virtual/: BUILD.bazel
src/libm/: BUILD.bazel
src/loadso/: BUILD  BUILD.bazel
src/loadso/dlopen/: BUILD.bazel
src/loadso/windows/: BUILD
src/locale/: BUILD.bazel
src/locale/macosx/: BUILD.bazel
src/locale/unix/: BUILD.bazel
src/locale/windows/: BUILD.bazel
src/main/: BUILD  BUILD.bazel
src/main/dummy/: BUILD.bazel
src/misc/: BUILD.bazel
src/misc/unix/: BUILD.bazel
src/misc/windows/: BUILD.bazel
src/power/: BUILD.bazel
src/power/linux/: BUILD.bazel
src/power/macosx/: BUILD.bazel
src/render/: BUILD.bazel  SDL_yuv_sw_c.h
src/render/direct3d/: BUILD  BUILD.bazel
src/render/direct3d11/: BUILD  BUILD.bazel
src/render/metal/: BUILD.bazel
src/render/opengl/: BUILD  BUILD.bazel
src/render/opengles/: BUILD  BUILD.bazel
src/render/opengles2/: BUILD  BUILD.bazel
src/render/software/: BUILD  BUILD.bazel
src/sensor/: BUILD.bazel
src/sensor/coremotion/: BUILD.bazel
src/sensor/windows/: BUILD.bazel
src/stdlib/: BUILD  BUILD.bazel
src/thread/: BUILD  BUILD.bazel
src/thread/generic/: BUILD.bazel
src/thread/pthread/: BUILD.bazel
src/thread/stdcpp/: BUILD.bazel
src/timer/: BUILD.bazel
src/timer/unix/: BUILD.bazel
src/video/: BUILD  BUILD.bazel  SDL_pixels_c.h  SDL_sysvideo.h
src/video/cocoa/: BUILD.bazel
src/video/directfb/: BUILD.bazel
src/video/dummy/: BUILD  BUILD.bazel
src/video/khronos/: BUILD  BUILD.bazel
src/video/kmsdrm/: BUILD.bazel
src/video/mir/: BUILD.bazel
src/video/nacl/: BUILD.bazel
src/video/uikit/: SDL_uikitmodes.h  SDL_uikitvideo.m
src/video/wayland/: BUILD.bazel
src/video/x11/: BUILD.bazel
src/video/yuv2rgb/: BUILD  BUILD.bazel
test/: BUILD.bazel  configure
