load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "audio",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	deps = [
			"//:SDL2internal",
			"//src/dynapi:dynapi",
			"//src/audio/disk:disk",
			"//src/audio/dummy:dummy",
		] + select({
		"//:windows": [
			"//src/audio/wasapi:wasapi",
			"//src/audio/directsound:directsound",
			"//src/audio/winmm:SDL_winmm",
		],
		"//:macos": [
			"//src/thread:thread",
			"//src/audio/coreaudio:coreaudio",
		],
		"//conditions:default": [
			"//src/thread:thread",
			"//src/audio/alsa:alsa",
			"//src/audio/jack:jack",
			"//src/audio/esd:esd",
			"//src/audio/pulseaudio",
			"//src/audio/arts:arts",
			"//src/audio/nas:nas",
			"//src/audio/sndio:sndio",
			"//src/audio/fusionsound:fusionsound",
		],
	}),
	visibility = ["//visibility:public"],
)

cc_library(
	name = "headers",
	hdrs = glob(["*.h"]),
	visibility = ["//visibility:public"],
)