load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "events",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	deps = [
		"//:SDL2internal",
		"//src/dynapi:headers",
		"//src/joystick:headers",
		"//src/video:headers",
		"//src/timer:headers",
		"//src/video/khronos:khronos",
	],
	visibility = ["//visibility:public"],
)

cc_library(
	name = "headers",
	hdrs = glob(["*.h"]),
	visibility = ["//visibility:public"],
)
