load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "file",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	deps = [
		"//:SDL2internal",
		"//src/dynapi:headers",
	] + select({
		"//:windows": [
		],
		"//:macos": [
			"//src/file/cocoa:cocoa",
		],
		"//conditions:default": [
		],
	}),
	visibility = ["//visibility:public"],
)
