load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "haptic",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	deps = [
			"//:SDL2internal",
			"//src/dynapi:headers",
			"//src/joystick:headers",
		] + select({
		"//:windows": [
			"//src/haptic/windows:windows"
		],
		"//conditions:default": [
			# "//src/haptic/linux:linux",
		],
	}),
	visibility = ["//visibility:public"],
)
