load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "hidapi",
	hdrs = glob(["*.h"]) + ["hidapi/hidapi.h"],
	includes = ["hidapi"],
	# srcs = glob(["*.c"]),
	deps = ["//:SDL2internal"] + select({
		"//:windows": [
			"//src/hidapi/windows:windows"
		],
		"//:macos": [
			"//src/hidapi/mac:mac",
			"//src/hidapi/mac:headers"
		],
		"//conditions:default": [],
	}),
	visibility = ["//visibility:public"],
)

cc_library(
	name = "headers",
	hdrs = glob(["*.h"]) + ["hidapi/hidapi.h"],
	visibility = ["//visibility:public"],
)
