load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "power",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	deps = [
			"//:SDL2internal",
			"//src/dynapi:dynapi",
		] + select({
		"//:windows": [
			"//src/power/windows:windows",
		],
		"//:macos": [
			"//src/power/macosx:macosx",
		],
		"//conditions:default": [],
	}),
	visibility = ["//visibility:public"],
)
