load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "power",
	alwayslink = True,
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	deps = [
			"//:SDL2internal",
			"//src/dynapi:dynapi",
		] + select({
		"//:windows": [
			"//src/power/windows:windows",
		],
		"//:macos": [
			"//src/power/macosx:macosx",
		],
		"//conditions:default": [
			"//src/power/linux:linux",
		],
	}),
	visibility = ["//visibility:public"],
)
