load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "sensor",
	srcs = [
		"SDL_sensor_c.h",
		"SDL_sensor.c",
		"SDL_syssensor.h",
		"dummy/SDL_dummysensor.c",
		"dummy/SDL_dummysensor.h",
	],
	deps = [
		"//:SDL2internal",
		"//src/dynapi:headers",
		"//src/events:headers",
		"//src/video:headers",
		"//src/video/khronos:khronos",
	],
	visibility = ["//visibility:public"],
)
