load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "sensor",
	srcs = [
		"SDL_sensor_c.h",
		"SDL_sensor.c",
		"SDL_syssensor.h",
		"dummy/SDL_dummysensor.c",
		"dummy/SDL_dummysensor.h",
	],
	deps = [
		"//:SDL2internal",
		"//src/dynapi:dynapi",
		"//src/events:events",
		"//src/video:video",
		"//src/video/khronos:khronos",
	] + select({
		"//:windows": [
			"//src/sensor/windows:windows"
		],
		"//conditions:default": [],
	}),
	visibility = ["//visibility:public"],
)
