load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "timer",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	deps = [
			"//:SDL2internal",
			"//src/dynapi:headers",
			"//src/thread:headers",
			"//src/thread/pthread:headers",
		] + select({
		"//:windows": [
			"//src/timer/windows:windows",
		],
		"//conditions:default": [],
	}),
	visibility = ["//visibility:public"],
)

cc_library(
	name = "headers",
	hdrs = glob(["*.h"]),
	visibility = ["//visibility:public"],
)
