load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "video",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	copts = ["-Isrc/video/khronos"],
	deps = [
			"//:SDL2internal",
			"//src/video/yuv2rgb:yuv2rgb",
			"//src/video/khronos:khronos",
			"//src/video/dummy:dummy",
			"//src/dynapi:headers",
			"//src/timer:headers",
		] + select({
		"//:windows": [
			"//src/video/windows:windows",
		],
		"//:macos": [
			"//src/video/cocoa:headers",
		],
		"//conditions:default": [
			"//src/video/cocoa:headers",
		],
	}),
	visibility = ["//visibility:public"],
)

cc_library(
	name = "headers",
	hdrs = glob(["*.h"]),
	visibility = ["//visibility:public"],
)
