load("@rules_cc//cc:defs.bzl", "cc_library")

objc_library(
	name = "coreaudio",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.m"]),
	copts = [
		"-fno-objc-arc",
		"-undefined",
		"dynamic_lookup"
	],
	sdk_frameworks = [
		"Audiotoolbox",
		"CoreAudio",
	],
	deps = [
		"//:SDL2internal",
		"//src/dynapi:dynapi",
		"//src/audio:headers",
		"//src/thread:thread",
	],
	visibility = ["//:__subpackages__"],
)
