load("@rules_cc//cc:defs.bzl", "cc_library")

objc_library(
	name = "cocoa",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.m"]),
	copts = [
		"-fno-objc-arc",
		"-undefined",
		"dynamic_lookup",
		"-framework Cocoa",
	],
	deps = [
		"//:SDL2internal",
		"//src/dynapi:dynapi",
	],
	visibility = ["//:__subpackages__"],
)
