load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "opengl",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	alwayslink = True,
	deps = [
		"//:SDL2internal",
		"//src/dynapi:dynapi",
		"//src/video/khronos:khronos",
		"//src/render:headers",
	],
	visibility = ["//:__subpackages__"],
)
