load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
	name = "software",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	alwayslink = True,
	deps = [
		"//:SDL2internal",
		"//src/dynapi:dynapi",
		"//src/render:headers",
		"//src/video:video",
	],
	visibility = ["//:__subpackages__"],
)


cc_library(
	name = "headers",
	hdrs = glob(["*.h"]),
	visibility = ["//:__subpackages__"],
)
